<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <TextView
        android:id="@+id/tvK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/k_perest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tilK"
        app:layout_constraintBottom_toTopOf="@id/tvN"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvK"
        app:layout_constraintBottom_toTopOf="@id/tilN"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/n_perest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvK"
        app:layout_constraintEnd_toStartOf="@id/tilN"
        app:layout_constraintBottom_toTopOf="@id/ivFormula"
        android:textColor="@color/black"
        android:textSize="24sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvN"
        app:layout_constraintBottom_toTopOf="@id/ivFormula"
        app:layout_constraintTop_toBottomOf="@id/tilK">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ivFormula"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvN"
        app:layout_constraintBottom_toTopOf="@id/btnAnswer"
        android:src="@drawable/razmesh_rep"
        />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFormula"
        app:layout_constraintBottom_toTopOf="@id/tvHeaderAnswer"
        android:text="@string/button_urn"
        />

    <TextView
        android:id="@+id/tvHeaderAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAnswer"
        app:layout_constraintEnd_toStartOf="@id/tvAnswer"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/answer"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintStart_toEndOf="@id/tvHeaderAnswer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAnswer"
        tools:text="@string/answer_sample"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>